--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "name": "postcsspg",
   "version": "1.0.0",
   "description": "",
@@ -9,11 +9,12 @@
   "dependencies": {
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.3",
-    "gulp-sass": "^2.0.3",
-    "gulp-postcss": "^5.1.9",
-    "postcss-custom-properties": "^4.0.0",
-    "postcss-css-variables": "^0.3.8",
-    "postcss-import": "^6.0.0"
+    "gulp-sass": "^2.0.4",
+    "gulp-postcss": "^6.0.0",
+    "postcss-custom-properties": "^5.0.0",
+    "postcss-css-variables": "^0.4.0",
+    "postcss-nested": "^1.0.0",
+    "postcss-import": "^7.0.0"
   },
   "devDependencies": {},
   "scripts": {
