--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gulp-postcss": "^6.0.1",
     "gulp-sass": "^3.0.0",
     "postcss-extend": "^1.0.5",
-    "postcss-nested": "^1.0.0"
+    "postcss-nested": "^1.0.0",
+    "postcss-for": "^2.1.1"
   },
   "devDependencies": {},
   "scripts": {
